--- a/index.html
+++ b/index.html
@@ -439,9 +439,9 @@
                         <!-- Start Single Testimonial -->
                         <div class="single-testimonial">
                             <div class="text">
-                                <div class="brand-icon">
+                                <!-- <div class="brand-icon">
                                     <img src="assets/images/testimonial/brand2.svg" alt="#">
-                                </div>
+                                </div> -->
                                 <p>"Profusion CRM has been a game-changer for our business. The intuitive interface and customizable workflows have streamlined our sales and marketing processes, allowing us to focus on what matters most - our customers. The support team has been incredibly responsive and helpful, making the transition to Profusion CRM seamless"</p>
                             </div>
                             <div class="author">
@@ -457,9 +457,9 @@
                         <!-- Start Single Testimonial -->
                         <div class="single-testimonial">
                             <div class="text">
-                                <div class="brand-icon">
+                                <!-- <div class="brand-icon">
                                     <img src="assets/images/testimonial/brand1.svg" alt="#">
-                                </div>
+                                </div> -->
                                 <p>"We were blown away by the ease of use and flexibility of Profusion CRM. The automation features have saved us so much time and effort, allowing us to allocate more resources to growing our business. The reporting and analytics tools have also given us valuable insights into our customer behavior and preferences. We couldn't be happier with our decision to switch to Profusion CRM!"</p>
                             </div>
                             <div class="author">
@@ -474,16 +474,16 @@
                         <!-- Start Single Testimonial -->
                         <div class="single-testimonial">
                             <div class="text">
-                                <div class="brand-icon">
+                                <!-- <div class="brand-icon">
                                     <img src="assets/images/testimonial/brand3.svg" alt="#">
-                                </div>
+                                </div> -->
                                 <p>"As a small business owner, I was hesitant to invest in a CRM system. But Profusion CRM has exceeded all my expectations. The user-friendly interface and affordable pricing made it an easy decision. The support team has been fantastic, helping me to customize the system to meet my specific needs. I've already seen a significant improvement in my sales and customer engagement. Thank you, Profusion CRM!"</p>
                             </div>
                             <div class="author">
                                 <img src="assets/images/testimonial/testi3.jpg" alt="#">
                                 <h4 class="name">
                                     Rachel T.
-                                    <span class="deg">CEO - RT Consulting</span>
+                                    <span class="deg">CEO - RT Consulting</span>
                                 </h4>
                             </div>
                         </div>
