updates some of the write ups

--- a/index.html
+++ b/index.html
@@ -524,8 +524,7 @@
                     <div class="section-title">
                         <h3 class="wow zoomIn" data-wow-delay=".2s">Faq</h3>
                         <h2 class="wow fadeInUp" data-wow-delay=".4s">Frequently Asked Questions</h2>
-                        <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
-                            Ipsum available, but the majority have suffered alteration in some form.</p>
+                        <p class="wow fadeInUp" data-wow-delay=".6s">We've compiled a list of answers to our most commonly asked questions to help you quickly find the information you need. If you can't find the answer to your question here, please don't hesitate to contact us.</p>
                     </div>
                 </div>
             </div>
