Update some details in index.html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Profusion CRM software</title>
-    <meta name="description" content="" />
+    <title>Profusion CRM software -  Run your Company / Business on Auto-Pilot with Profusion CRM and Project management software</title>
+    <meta name="description" content=" Run your Company / Business on Auto-Pilot with Profusion CRM and Project management software" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/profusion_logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://profusionsoftwarehomepage.netlify.app/assets/images/logo/profusion_logo.png" />
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="https://profusionsoftwarehomepage.netlify.app/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
-    <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="stylesheet" href="assets/css/tiny-slider.css" />
-    <link rel="stylesheet" href="assets/css/glightbox.min.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://profusionsoftwarehomepage.netlify.app/assets/css/LineIcons.2.0.css" />
+    <link rel="stylesheet" href="https://profusionsoftwarehomepage.netlify.app/assets/css/animate.css" />
+    <link rel="stylesheet" href="https://profusionsoftwarehomepage.netlify.app/assets/css/tiny-slider.css" />
+    <link rel="stylesheet" href="https://profusionsoftwarehomepage.netlify.app/assets/css/glightbox.min.css" />
+    <link rel="stylesheet" href="https://profusionsoftwarehomepage.netlify.app/assets/css/main.css" />
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -44,7 +44,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo/Asset 1.svg" alt="Logo">
+                                <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/logo/Asset 1.svg" alt="Logo">
                             </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -92,7 +92,8 @@
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
                         <h1 class="wow fadeInLeft" data-wow-delay=".4s">Powerful solutions for your Business.</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">Run your Company / Business on Auto Pilot with Profusion CRM and Project management software
+                        <p class="wow fadeInLeft" data-wow-delay=".6s">
+                            Run your Company / Business on Auto Pilot with Profusion CRM and Project management software
                         </p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
                             <a href="contact.html" class="btn">Get Started</a>
@@ -104,7 +105,7 @@
                 </div>
                 <div class="col-lg-7 col-md-12 col-12">
                     <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
-                        <img src="assets/images/hero/5-2.png" alt="#">
+                        <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/hero/5-2.png" alt="#">
                     </div>
                 </div>
             </div>
@@ -212,7 +213,7 @@
                     </div>
                     <div class="col-lg-6 col-md-12 col-12">
                         <div class="info-image wow fadeInRight" data-wow-delay=".5s">
-                            <img class="ss1" src="assets/images/app-ss/11.jpg" alt="#">
+                            <img class="ss1" src="https://profusionsoftwarehomepage.netlify.app/assets/images/app-ss/11.jpg" alt="#">
                         </div>
                     </div>
                 </div>
@@ -221,7 +222,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12 col-12">
                         <div class="info-image wow fadeInLeft" data-wow-delay=".3s">
-                            <img class="ss1" src="assets/images/app-ss/10.jpg" alt="#">
+                            <img class="ss1" src="https://profusionsoftwarehomepage.netlify.app/assets/images/app-ss/10.jpg" alt="#">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-12">
@@ -430,8 +431,8 @@
 
     <!-- Start Testimonials Area -->
     <section class="testimonials section">
-        <img class="testi-patern1" src="assets/images/testimonial/testi-patern.svg" alt="#">
-        <img class="testi-patern2" src="assets/images/testimonial/testi-patern.svg" alt="#">
+        <img class="testi-patern1" src="https://profusionsoftwarehomepage.netlify.app/assets/images/testimonial/testi-patern.svg" alt="#">
+        <img class="testi-patern2" src="https://profusionsoftwarehomepage.netlify.app/assets/images/testimonial/testi-patern.svg" alt="#">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
@@ -445,7 +446,7 @@
                                 <p>"Profusion CRM has been a game-changer for our business. The intuitive interface and customizable workflows have streamlined our sales and marketing processes, allowing us to focus on what matters most - our customers. The support team has been incredibly responsive and helpful, making the transition to Profusion CRM seamless"</p>
                             </div>
                             <div class="author">
-                                <img src="assets/images/testimonial/testi1.jpg" alt="#">
+                                <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/testimonial/testi1.jpg" alt="#">
                                 <h4 class="name">
                                     Mark Mohammad
                                     <span class="deg">Marketing Manager -  GreenTech Inc.
@@ -463,7 +464,7 @@
                                 <p>"We were blown away by the ease of use and flexibility of Profusion CRM. The automation features have saved us so much time and effort, allowing us to allocate more resources to growing our business. The reporting and analytics tools have also given us valuable insights into our customer behavior and preferences. We couldn't be happier with our decision to switch to Profusion CRM!"</p>
                             </div>
                             <div class="author">
-                                <img src="assets/images/testimonial/testi2.jpg" alt="#">
+                                <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/testimonial/testi2.jpg" alt="#">
                                 <h4 class="name">
                                     David K.
                                     <span class="deg">Sales Director - Prodigy Solutions</span>
@@ -477,10 +478,10 @@
                                 <!-- <div class="brand-icon">
                                     <img src="assets/images/testimonial/brand3.svg" alt="#">
                                 </div> -->
-                                <p>"As a small business owner, I was hesitant to invest in a CRM system. But Profusion CRM has exceeded all my expectations. The user-friendly interface and affordable pricing made it an easy decision. The support team has been fantastic, helping me to customize the system to meet my specific needs. I've already seen a significant improvement in my sales and customer engagement. Thank you, Profusion CRM!"</p>
+                                <p>" As a small business owner, I hesitated to invest in a CRM system. However, Profusion CRM has exceeded all my expectations. The user-friendly interface and affordable pricing made it an easy decision. The support team has been fantastic, helping me to customize the system to meet my specific needs. I've already seen a significant improvement in my sales and customer engagement. Thank you, Profusion CRM!"</p>
                             </div>
                             <div class="author">
-                                <img src="assets/images/testimonial/testi3.jpg" alt="#">
+                                <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/testimonial/testi3.jpg" alt="#">
                                 <h4 class="name">
                                     Rachel T.
                                     <span class="deg">CEO - RT Consulting</span>
@@ -622,19 +623,19 @@
             <div class="client-logo-wrapper">
                 <div class="client-logo-carousel d-flex align-items-center justify-content-between">
                     <div class="client-logo">
-                        <img src="assets/images/client-logo/graygrids-logo.svg" alt="">
+                        <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/client-logo/graygrids-logo.svg" alt="">
                     </div>
                     <div class="client-logo">
-                        <img src="assets/images/client-logo/pagebulb-logo.svg" alt="">
+                        <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/client-logo/pagebulb-logo.svg" alt="">
                     </div>
                     <div class="client-logo">
-                        <img src="assets/images/client-logo/lineicons-logo.svg" alt="">
+                        <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/client-logo/lineicons-logo.svg" alt="">
                     </div>
                     <div class="client-logo">
-                        <img src="assets/images/client-logo/graygrids-logo.svg" alt="">
+                        <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/client-logo/graygrids-logo.svg" alt="">
                     </div>
                     <div class="client-logo">
-                        <img src="assets/images/client-logo/lineicons-logo.svg" alt="">
+                        <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/client-logo/lineicons-logo.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -653,7 +654,7 @@
                         <div class="single-footer f-about">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logo/profusion_logo.png" alt="#">
+                                    <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/logo/profusion_logo.png" alt="#">
                                 </a>
                             </div>
                             <p>Run your Company / Business on Auto Pilot with Profusion CRM and Project management software.</p>
@@ -770,12 +771,12 @@
     </a>
 
     <!-- ========================= JS here ========================= -->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/tiny-slider.js"></script>
-    <script src="assets/js/glightbox.min.js"></script>
-    <script src="assets/js/count-up.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="https://profusionsoftwarehomepage.netlify.app/assets/js/bootstrap.min.js"></script>
+    <script src="https://profusionsoftwarehomepage.netlify.app/assets/js/wow.min.js"></script>
+    <script src="https://profusionsoftwarehomepage.netlify.app/assets/js/tiny-slider.js"></script>
+    <script src="https://profusionsoftwarehomepage.netlify.app/assets/js/glightbox.min.js"></script>
+    <script src="https://profusionsoftwarehomepage.netlify.app/assets/js/count-up.min.js"></script>
+    <script src="https://profusionsoftwarehomepage.netlify.app/assets/js/main.js"></script>
     <script type="text/javascript">
         //======== tiny slider
         tns({
