--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button add-list-button">
-                                <a href="https://profusionsoftware.com" class="btn">Get it now</a>
+                                <a href="https://profusionsoftware.com/register" class="btn">Get it now</a>
                             </div>
                         </nav>
                         <!-- End Navbar -->
@@ -93,10 +93,10 @@
                     <div class="hero-content">
                         <h1 class="wow fadeInLeft" data-wow-delay=".4s">Powerful solutions for your Business.</h1>
                         <p class="wow fadeInLeft" data-wow-delay=".6s">
-                            Run your Company / Business on Auto Pilot with Profusion CRM and Project management software
+                            Run your Company / Business on Auto-Pilot with Profusion CRM and Project management software
                         </p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
-                            <a href="contact.html" class="btn">Get Started</a>
+                            <a href="https://profusionsoftware.com/register" class="btn">Get Started</a>
                             <a href="https://www.youtube.com/watch?v=VnL8btfLHJg"
                                 class="glightbox video-button"><span class="video"><i
                                         class="lni lni-play"></i></span><span class="text">Watch Intro</span></a>
