--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                                             aria-label="Toggle navigation">Overview</a>
                                     </li>
                             
-                                    <li class="nav-item">
+                                    <!--  <li class="nav-item">
                                         <a href="contact.html" aria-label="Toggle navigation">Contact</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button add-list-button">
@@ -205,7 +205,7 @@
                                 Over 1,000 customers worldwide trust Profusion CRM to streamline their sales, marketing, and customer service processes. Our cutting-edge solution empowers businesses of all sizes to boost productivity, customer satisfaction, and growth. Join the ranks of our satisfied customers and discover the power of Profusion CRM
                             </p>
                             <div class="button">
-                                <a href="javascript:void(0)" class="btn">Get Started</a>
+                                <a href="https://profusionsoftware.com/register" class="btn">Get Started</a>
                             </div>
                            
                         </div>
@@ -231,7 +231,7 @@
                             <div class="main-icon">
                                 <i class="lni lni-layout"></i>
                             </div>
-                            <h2>We Have High Quality UI/UX That Help Customer Satisfaction</h2>
+                            <h2>We Have High-Quality UI/UX That Helps Customer Satisfaction</h2>
                             <p>
                                 At Profusion CRM, we understand that a seamless user experience is key to driving customer satisfaction. 
                                 That's why we've designed our CRM software with a high-quality UI/UX that's intuitive, 
@@ -240,7 +240,7 @@
                                 improved customer interactions, and ultimately, increased customer satisfaction.
                             </p>
                             <div class="button">
-                                <a href="javascript:void(0)" class="btn">Get Started</a>
+                                <a href="https://profusionsoftware.com/register" class="btn">Get Started</a>
                             </div>
                         </div>
                         <!-- End Info Text -->
@@ -508,7 +508,7 @@
                             Streamline your sales, marketing, and customer service processes with Profusion CRM software. Automate routine tasks, gain real-time insights, and enhance collaboration to stay organized and focused. Start your free trial today and discover how Profusion CRM can boost your productivity and transform your business
                         </p>
                         <div class="button wow fadeInUp" data-wow-delay=".6s">
-                            <a href="https://profusionsoftware.com" class="btn">Get Start For Free</a>
+                            <a href="https://profusionsoftware.com/register" class="btn">Get Start For Free</a>
                         </div>
                     </div>
                 </div>
