--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
     <!--/ End Faq Area -->
 
     <!-- Start Client Logo Section Area -->
-    <div class="client-logo-section">
+<!--     <div class="client-logo-section">
         <div class="container">
             <div class="client-logo-wrapper">
                 <div class="client-logo-carousel d-flex align-items-center justify-content-between">
@@ -640,7 +640,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Client Logo Section Area -->
 
     <!-- Start Footer Area -->
