--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/logo/Asset 1.svg" alt="Logo">
+                                <img src="https://profusionsoftwarehomepage.netlify.app/assets/images/logo/Asset_1.svg" alt="Logo">
                             </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
